Add real-time analytics dashboard and bug fixes